# rental_eval

./: .gitignore  RENTAL_EVALUATOR_DOCS.md  supabase_schema.sql
.claude/: settings.local.json
backend/: .env.example  Dockerfile  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  building.py  convenience.py  food.py  future_risk.py  lifestyle.py  orchestrator.py  safety.py  transportation.py  utilities.py
backend/app/db/: cache.py  evaluations.py  supabase.py  users.py
backend/app/middleware/: auth.py  ratelimit.py
backend/app/routers/: evaluate.py  key.py  profile.py  reports.py  session.py
backend/app/tools/: air_quality.py  crime.py  google_maps.py  search.py  walkscore.py  weather.py  yelp.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: AddressInput.tsx  AgentProgress.tsx  ApiKeyPrompt.tsx  CostBreakdown.tsx  DimensionCard.tsx  PastEvaluations.tsx  ProfileForm.tsx  ReportView.tsx  ScoreBadge.tsx
frontend/src/hooks/: useSession.ts
frontend/src/lib/: api.ts  supabase.ts
frontend/src/pages/: AuthPage.tsx  Evaluate.tsx  History.tsx  Home.tsx  Profile.tsx  ReportDetail.tsx
frontend/src/store/: index.ts
frontend/src/types/: index.ts
